--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <h1>Tami Evnin</h1>
     </header>
     
-    <nav>
+    <!-- <nav>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="portfolio/index.html">Portfolio</a></li>
         </ul>
-    </nav>
+    </nav> -->
 
     <h2>I'm an accomplished product design leader with expertise in driving product innovation and design strategy in B2B, Recruiting Tech, and Fintech.</h2>
     
