--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,12 +16,13 @@
         <h1>Tami Evnin</h1>
     </header>
 
-    <nav>
+    <!-- <nav>
         <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="#">Portfolio</a></li>
         </ul>
-    </nav>
+    </nav> -->
+    
     <h1>Portfolio</h1>
   
     <div class="project">
