--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,7 +13,7 @@
   <!-- Your content goes here -->
 
     <header>
-        <h1>Tami Evnin</h1>
+        <h1>Tami Evnin - Portfolio <span class="emoji">🎨</span></h1>
     </header>
 
     <!-- <nav>
@@ -22,8 +22,10 @@
         <li><a href="#">Portfolio</a></li>
         </ul>
     </nav> -->
-    
-    <h1>Portfolio</h1>
+
+    <!-- <h1>Portfolio <span class="emoji">🎨</span></h1> -->
+
+    <!-- <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="728" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FnLM8V1Yxd0G3RdGpJbo3RS%2FPortfolio%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D4-244%26viewport%3D507%252C453%252C0.12%26t%3DPbstj9QTRqiuTO8N-1%26scaling%3Dscale-down%26starting-point-node-id%3D4%253A244%26show-proto-sidebar%3D1%26mode%3Ddesign" allowfullscreen></iframe> -->
   
     <div class="project">
         <h2>Design System Leadership</h2>
@@ -32,7 +34,8 @@
             <p class="tag">v2.0 Design & Development</p>
             <p class="tag">System Contribution Model</p>
         </div>
-        <p>Product Design Director at Glassdoor, I led the delivery of component design & development for Glassdoor's Design System 2.0. I developed and implemented a governance model across the organization, including streamlining adoption of and enabling contribution to the Design System by Product teams.</p> 
+        <p>As Product Design Director at Glassdoor, I led the delivery of component design & development for Glassdoor's Design System 2.0. I developed and implemented a governance model across the organization, including streamlining adoption of and enabling contribution to the Design System by Product teams.</p>
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FnLM8V1Yxd0G3RdGpJbo3RS%2FPortfolio%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D218-951%26viewport%3D507%252C453%252C0.12%26t%3DPbstj9QTRqiuTO8N-1%26scaling%3Dscale-down%26starting-point-node-id%3D218%253A951%26mode%3Ddesign" allowfullscreen></iframe>
         <p>Contact me to learn more.</p>
     </div>
 
@@ -43,13 +46,14 @@
             <p class="tag">Solution Ideation & Iteration</p>
             <p class="tag">MVP Product Strategy</p>
         </div>
-        <p>Working with a cross functional team, I lead Design strategy, user research, ideation, and prototyping for an effort to clarify Glassdoor’s approach to winning in the Employee Experience space. The project consisted of 3 phases:</p>
+        <p>Working with a cross functional team, I led Design strategy, user research, ideation, and prototyping for an effort to clarify Glassdoor’s approach to winning in the Employee Experience space. The project consisted of 3 phases:</p>
             <ol>
                 <li>Discovery - Defining the user, core insight, and need space. Establishing conviction for why Glassdoor has an advantage in solving for this need. Validating the business case.</li>
                 <li>Concept - Defining & vetting a new product to pursue.</li>
                 <li>Development - Alpha & Beta testing. Go to market planning.</li>
             </ol>
-            <p>We worked with an Executive steering committee throughout the project to share progress and to make decisions about next steps.</p> 
+            <p>We worked with an Executive steering committee throughout the project to share progress and to make decisions about next steps.</p>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FnLM8V1Yxd0G3RdGpJbo3RS%2FPortfolio%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D218-715%26viewport%3D507%252C453%252C0.12%26t%3DPbstj9QTRqiuTO8N-1%26scaling%3Dscale-down%26starting-point-node-id%3D218%253A715%26mode%3Ddesign" allowfullscreen></iframe>
         <p>Contact me to learn more.</p>
     </div>
 
@@ -61,13 +65,14 @@
             <p class="tag">Design Management</p>
             <p class="tag">Recruiting & Hiring</p>
         </div>
-        <p>Working with a cross functional team, I lead Design strategy, user research, ideation, and prototyping for an effort to clarify Glassdoor’s approach to winning in the Employee Experience space. The project consisted of 3 phases:</p>
+        <!-- <p>Working with a cross functional team, I led Design strategy, user research, ideation, and prototyping for an effort to clarify Glassdoor’s approach to winning in the Employee Experience space. The project consisted of 3 phases:</p>
             <ol>
                 <li>Discovery - Defining the user, core insight, and need space. Establishing conviction for why Glassdoor has an advantage in solving for this need. Validating the business case.</li>
                 <li>Concept - Defining & vetting a new product to pursue.</li>
                 <li>Development - Alpha & Beta testing. Go to market planning.</li>
             </ol>
-        <p>We worked with an Executive steering committee throughout the project to share progress and to make decisions about next steps.</p> 
+        <p>We worked with an Executive steering committee throughout the project to share progress and to make decisions about next steps.</p>  -->
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FnLM8V1Yxd0G3RdGpJbo3RS%2FPortfolio%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D218-1125%26viewport%3D507%252C453%252C0.12%26t%3DPbstj9QTRqiuTO8N-1%26scaling%3Dscale-down%26starting-point-node-id%3D218%253A1125%26mode%3Ddesign" allowfullscreen></iframe>
         <p>Contact me to learn more.</p>
     </div>
 
