--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <p>My commitment to product and design excellence runs deep. I've championed user-centered methods, ensuring product roadmaps reflect the most pressing user problems and market opportunities. My influence has also extended to the establishment and management of Design Systems, enabling consistency and efficiency in design craft and product development process.</p>
 
-    <p>Currently, I'm recharging my creative energies and savoring life beyond work. While I soak in this much-needed break, I'm also exploring opportunities for consulting and freelance projects. If you're interested in collaborating, please reach out on LinkedIn.</p>
+    <p>Currently, I'm recharging my creative energies and savoring life beyond work. While I soak in this much-needed break, I'm also exploring opportunities for consulting and freelance projects. If you're interested in collaborating, please reach out on <a href="https://www.linkedin.com/in/tamiiiiiiiiiiii/">LinkedIn.</a></p>
 
     <script src="script.js"></script>
     
