starting hamburger nav

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,15 +13,18 @@
   <!-- Your content goes here -->
 
     <header>
-        <h1>Tami Evnin - Portfolio <span class="emoji">🎨</span></h1>
+        <h1><a href="../index.html">Tami Evnin</a> - Portfolio <span class="emoji">🎨</span></h1>
+        <div class="hamburger-menu" onclick="toggleMenu()">
+            <!-- &#9776; -->
+        </div>
     </header>
 
-    <!-- <nav>
+    <nav>
         <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="#">Portfolio</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="#">Portfolio</a></li>
         </ul>
-    </nav> -->
+    </nav>
 
   
     <div class="project">
@@ -73,6 +76,6 @@
         <p>Contact me to learn more.</p>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
