--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
     <!-- <div id="header-placeholder"></div> -->
     <header>
         <h1>Tami Evnin</h1>
+        <div class="hamburger-menu" onclick="toggleMenu()">
+            <!-- &#9776; -->
+        </div>
     </header>
-    
-    <!-- <nav>
+
+    <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="portfolio/index.html">Portfolio</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="#">Portfolio</a></li>
         </ul>
-    </nav> -->
+    </nav>
 
     <h2>I'm an accomplished product design leader with expertise in driving product innovation and design strategy in B2B, Recruiting Tech, and Fintech.</h2>
     
