Cleanup Portfolio & Index, add project page template

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
     <!-- <div id="header-placeholder"></div> -->
     <header>
         <h1>Tami Evnin</h1>
-        <div class="hamburger-menu" onclick="toggleMenu()">
-            <!-- &#9776; -->
-        </div>
+        <!-- <div class="hamburger-menu" onclick="toggleMenu()">
+            &#9776;
+        </div> -->
     </header>
 
-    <nav>
+    <!-- <nav>
         <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="portfolio/index.html">Portfolio</a></li>
         </ul>
-    </nav>
+    </nav> -->
 
-    <h2>I'm an accomplished product design leader with expertise in driving product innovation and design strategy in B2B, Recruiting Tech, and Fintech.</h2>
+    <h2>Accomplished product design leader with expertise in driving product innovation and design strategy in B2B, Recruiting Tech, and Fintech.</h2>
     
     <p>My journey has seen me at the helm of discovery research and new product concept ideation in both nascent B2B and consumer products. Notably, I've left my mark at esteemed organizations such as Glassdoor & Nasdaq. I have collaborated with cross-functional teams, including Product Management, Engineering, Market Insights, and Business Operations to develop, refine, and present compelling product strategies and roadmaps to executive leadership.</p>
 
