--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,9 +34,9 @@
             <p class="tag">v2.0 Design & Development</p>
             <p class="tag">System Contribution Model</p>
         </div>
-        <p>As Product Design Director at Glassdoor, I led the delivery of component design & development for Glassdoor's Design System 2.0. I developed and implemented a governance model across the organization, including streamlining adoption of and enabling contribution to the Design System by Product teams.</p>
-        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FnLM8V1Yxd0G3RdGpJbo3RS%2FPortfolio%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D218-951%26viewport%3D507%252C453%252C0.12%26t%3DPbstj9QTRqiuTO8N-1%26scaling%3Dscale-down%26starting-point-node-id%3D218%253A951%26mode%3Ddesign" allowfullscreen></iframe>
-        <p>Contact me to learn more.</p>
+        <p>As Product Design Director at Glassdoor, I led the delivery of component design & development for Glassdoor&apos;s Design System 2.0. I developed and implemented a governance model across the organization, including streamlining adoption of and enabling contribution to the Design System by Product teams.</p>
+
+        <p><a href="design-system.html">Learn More</a></p>
     </div>
 
     <div class="project">
@@ -46,15 +46,9 @@
             <p class="tag">Solution Ideation & Iteration</p>
             <p class="tag">MVP Product Strategy</p>
         </div>
-        <p>Working with a cross functional team, I led Design strategy, user research, ideation, and prototyping for an effort to clarify Glassdoor’s approach to winning in the Employee Experience space. The project consisted of 3 phases:</p>
-            <ol>
-                <li>Discovery - Defining the user, core insight, and need space. Establishing conviction for why Glassdoor has an advantage in solving for this need. Validating the business case.</li>
-                <li>Concept - Defining & vetting a new product to pursue.</li>
-                <li>Development - Alpha & Beta testing. Go to market planning.</li>
-            </ol>
-            <p>We worked with an Executive steering committee throughout the project to share progress and to make decisions about next steps.</p>
-            <!-- <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FnLM8V1Yxd0G3RdGpJbo3RS%2FPortfolio%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D218-715%26viewport%3D507%252C453%252C0.12%26t%3DPbstj9QTRqiuTO8N-1%26scaling%3Dscale-down%26starting-point-node-id%3D218%253A715%26mode%3Ddesign" allowfullscreen></iframe> -->
-        <p>Contact me to learn more.</p>
+        <p>Working with a cross functional team, I led Design strategy, user research, ideation, and prototyping for an effort to clarify Glassdoor’s approach to winning in the Employee Experience space.</p>
+        
+        <p><a href="zero-to-one.html">Learn More</a></p>
     </div>
 
     <div class="project">
@@ -69,7 +63,7 @@
         <h3>Leadership</h3>
         <ul>
             <li>Implemented program & project management process across Product Design Org (Asana)</li>
-            <li>Collaborated with other design directors to iterate on team rituals, including Design Review/crit</li>
+            <li>Collaborated with other design directors to iterate on team rituals, including Design Review/Crit</li>
             <li>Fostered productive and collaborative relationships with key cross-functional partners as B2B domain leader and expert</li>
         </ul>
         
