getting ready for go-live
- small updates to DS pages
- PW links
- robots

--- a/portfolio/design-system.html
+++ b/portfolio/design-system.html
@@ -8,12 +8,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&family=Open+Sans:wght@400;600;700;800&family=Playfair+Display:wght@400;600;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
+  <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
   <!-- Your content goes here -->
 
     <header>
         <h1>Tami Evnin</h1>
+        <a href="index.html">Back to portfolio</a>
         <!-- <div class="hamburger-menu" onclick="toggleMenu()">
             &#9776;
         </div> -->
@@ -34,7 +36,7 @@
             <p class="tag">v2.0 Design & Development</p>
             <p class="tag">System Contribution Model</p>
         </div> -->
-        <p>As Product Design Director at Glassdoor, I led the delivery of component design & development for Glassdoor's Design System 2.0. I developed and implemented a governance model across the organization, including streamlining adoption of and enabling contribution to the Design System by Product teams.</p>
+        <p>As Product Design Director at Glassdoor, I led the delivery of component design & development for Glassdoor's Design System as the company launched a <a href="https://www.glassdoor.com/blog/welcome-to-the-new-glassdoor/" target="_blank">product-wide rebrand</a>. I developed and implemented a governance model across the organization, including streamlining adoption of and enabling contribution to the Design System by Product teams.</p>
         <p class="impact"></p>
     </div>
 
@@ -66,11 +68,12 @@
         <!-- <img src="../assets/images/structure.png" width="50%" height="50%" > -->
         <p>It was important to educating partners and executives about the structure of the Design System, so that they could understand how this effort would help to accelarate design and development. Atomic structure, content density, and screen-size breakpoints translated into scalable building blocks of key content types, like Jobs.</p>
         <div class="img-group">
-            <img class="lightbox-image" src="../assets/images/atomic-structure.png" width="30%" height="30%" />
-            <img class="lightbox-image" src="../assets/images/content-density.png" width="30%" height="30%" />
-            <img class="lightbox-image" src="../assets/images/breakpoints.png" width="30%" height="30%" />
+            <img class="lightbox-image" src="../assets/images/atomic-structure.png" width="50%" height="50%" />
+            <img class="lightbox-image" src="../assets/images/content-density.png" width="50%" height="50%" />
+            <img class="lightbox-image" src="../assets/images/breakpoints.png" width="50%" height="50%" />
+            <img class="lightbox-image" src="../assets/images/ds-examples.png" width="50%" height="50%" />
         </div>
-        <img src="../assets/images/ds-examples.png" width="50%" height="50%" />
+        
     </div>
 
     <script src="../script.js"></script>
