--- a/portfolio/zero-to-one.html
+++ b/portfolio/zero-to-one.html
@@ -8,12 +8,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&family=Open+Sans:wght@400;600;700;800&family=Playfair+Display:wght@400;600;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
+  <meta name="robots" content="noindex, nofollow">
+
 </head>
 <body>
   <!-- Your content goes here -->
 
     <header>
         <h1>Tami Evnin</h1>
+        <a href="index.html">Back to portfolio</a>
         <!-- <div class="hamburger-menu" onclick="toggleMenu()">
             &#9776;
         </div> -->
@@ -28,7 +31,7 @@
 
   
     <div class="intro">
-        <h2>Zero to One - New Product Discovery & Strategy</h2>
+        <h2>New Product Discovery & Strategy</h2>
         <!-- <div class="tags">
             <p class="tag">System Adoption</p>
             <p class="tag">v2.0 Design & Development</p>
