--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&family=Open+Sans:wght@400;600;700;800&family=Playfair+Display:wght@400;600;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
+
 </head>
 <body>
   <!-- Your content goes here -->
@@ -36,7 +37,7 @@
         </div>
         <p>As Product Design Director at Glassdoor, I led the delivery of component design & development for Glassdoor&apos;s Design System 2.0. I developed and implemented a governance model across the organization, including streamlining adoption of and enabling contribution to the Design System by Product teams.</p>
 
-        <p><a href="design-system.html">Learn More</a></p>
+        <button onclick="checkPassDS()">Learn More &#40;password required&#41;</button>
     </div>
 
     <div class="project">
@@ -48,7 +49,7 @@
         </div>
         <p>Working with a cross functional team, I led Design strategy, user research, ideation, and prototyping for an effort to clarify Glassdoor’s approach to winning in the Employee Experience space.</p>
         
-        <p><a href="zero-to-one.html">Learn More</a></p>
+        <button onclick="checkPassEX()">Learn More &#40;password required&#41;</button>
     </div>
 
     <div class="project">
