--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -53,6 +53,17 @@
     </div>
 
     <div class="project">
+        <h2>B2B International Profiles</h2>
+        <div class="tags">
+            <p class="tag">B2B / B2B2C</p>
+            <p class="tag">Solution Ideation & Iteration</p>
+        </div>
+        <p>As a solo individual contributor, I managed the user experience for Glassdoor&apos;s primary B2B Product, Employer Center. Working closely with three product teams, I delivered critical platform updates in order to retain customers and provide them with best-in-class tools to manage their Employer Brands.</p>
+        
+        <button onclick="checkPassB2B()">Learn More &#40;password required&#41;</button>
+    </div>
+
+    <div class="project">
         <h2>Team Leadership & Management</h2>
         <div class="tags">
             <p class="tag">Program Management</p>
