Adding EX screens

--- a/portfolio/profile-mgmt.html
+++ b/portfolio/profile-mgmt.html
@@ -58,13 +58,12 @@
             <li><b>For Glassdoor:</b> Increase job satisfaction for CSMs by giving them better tools to troubleshoot issues related to management of multiple global profiles; decrease in support tickets related to content management issues; and increase developer efficiency.</li>
         </ol>
         <div class="img-group">
-            
             <figure>
                 <figcaption>Company Profile on glassdoor.com &#40;United States&#41;</figcaption>
                 <img class="lightbox-image" src="../assets/images/profiles-us.png" width="100%" height="100%"/>
             </figure>
             <figure>
-                <figcaption>Company Profile on glassdoor.com, redirected from glassdoor.co.il &#40;Israel&#41;</figcaption>
+                <figcaption>Company Profile on glassdoor.co.il &#40;Israel&#41;</figcaption>
                 <img class="lightbox-image" src="../assets/images/profiles-row.png" width="100%" height="100%" />
             </figure>
             <figure>
@@ -85,7 +84,7 @@
 
     <div class="detail">
             <h3>Managing Profile Content</h3>
-            <p>Employers were then able to manage their branded content at the field level. They could set global company details which would display across all domains unless customized. Tooltips, tags, and enabled/disabled states across the UX helped users understand the level of customization they were managing.</p>
+            <p>Employers were then able to manage their branded content at the field level. They could set global company details which would display across all domains unless customized. Tooltips, tags, and enabled/disabled states across the UX helped users understand the level of customization they were managing.g</p>
             <div class="img-group">
                 <img class="lightbox-image" src="../assets/images/profiles-content-global.png" width="30%" height="30%" />
                 <img class="lightbox-image" src="../assets/images/profiles-content-default.png" width="30%" height="30%" />
