--- a/portfolio/zero-to-one.html
+++ b/portfolio/zero-to-one.html
@@ -84,21 +84,35 @@
     <div class="detail">
         <h3>Concept Phase</h3>
         <!-- <img src="../assets/images/structure.png" width="50%" height="50%" > -->
-        <p>The goal of the concept phase was to create hypotheses and product concepts to test with target users in order to create a product blueprint of prioritized use cases, journey maps, and features. My primary role was building and iterating on prototypes for concept tests for various use cases. See below for one example.</p>
+        <p>The goal of the concept phase was to create hypotheses and product concepts to test with target users in order to create a product blueprint of prioritized use cases, journey maps, and features. My primary role was building and iterating on prototypes for concept tests for various use cases.</p>
+        <p>I crafted a series of proof of concept views for B2B users. Wireframes were used to collect feedback amongst the team and internal stakeholders. Higher fidelity mockups were then created to share in concept testing sessions with potential users.</p>
+        <div class="img-group">
+            <figure>
+                <figcaption>Wireframe for an Employee Dashboard. After numerous iterations, we eventually tested a mobile experience, as shared below.</figcaption>
+                <img class="lightbox-image" src="../assets/images/ex-employee-wire.png" width="100%" height="100%" />
+            </figure>
+            <figure>
+                <figcaption>Wireframe for a Team Leader Dashboard. We believed this user would be key for adoption of the new product.</figcaption>
+                <img class="lightbox-image" src="../assets/images/ex-teamleader-wire.png" width="100%" height="100%" />
+            </figure>
+            <figure>
+                <figcaption>Higher fidelity mockup for an Executive Dashboard. We believed this user would be the primary buyer for the new product.</figcaption>
+                <img class="lightbox-image" src="../assets/images/ex-exec.png" width="100%" height="100%"/>
+            </figure>
+        </div>
+
+        <p>In addition to B2B concepts, I designed proof of concept prototoypes to test with potential B2C users. Below is one such prototype we used in concept testing. You can also watch a video walkthrough of the prototype <a href="https://drive.google.com/file/d/14ga9fcmIJ0DoKj-0IIXfttrtnLOIWO3T/view?usp=sharing" target="_blank">here</a>.</p>
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="450" height="700" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FtyVPMxY0QW6pyZCRohXBKj%2FPhase-2-Employee-Research%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D21-1046%26viewport%3D540%252C458%252C0.04%26t%3DWiMnTdZdtmWzwr5c-1%26scaling%3Dscale-down%26starting-point-node-id%3D21%253A1046%26mode%3Ddesign" allowfullscreen></iframe>
-        <p>Or watch a video walkthrough of the prototype <a href="https://drive.google.com/file/d/14ga9fcmIJ0DoKj-0IIXfttrtnLOIWO3T/view?usp=sharing" target="_blank">here</a>.</p>
-        <!-- <img src="../assets/images/adoption-model.png" width="100%" height="100%" />
-        <img src="../assets/images/contribution-model.png" width="100%" height="100%" /> -->
-        <div class="impact">
-            <h3>So what?</h3>
-            <ul>
-                <li>By the end of the concept phase, we saw very strong traction of our product concept with Employee users. The value proposition of creating a safe space to engage openly and transparently with your team resonated strongly.</li>
-                <li>Department leader users were interested in and open to the product concept if we could deliver the team engagement and team solutions they were already lacking.</li>
-                <li>After considering several approaches, we believed our way-in was to engage employees through an internal surface, but relied on an external strategy to quickly earn the attention and support of department leaders, who could help us solve our cold-start challenge by encouraging employees to participate.</li>
-                <li>Our next planned step was to collaborate with various product and cross-functional teams to create a roadmap for both development and go-to-market.</li>
-            </ul>
-        </div> 
     </div>
+    <div class="impact">
+        <h3>So what?</h3>
+        <ul>
+            <li>By the end of the concept phase, we saw very strong traction of our product concept with Employee users. The value proposition of creating a safe space to engage openly and transparently with your team resonated strongly.</li>
+            <li>Department leader users were interested in and open to the product concept if we could deliver the team engagement and team solutions they were already lacking.</li>
+            <li>After considering several approaches, we believed our way-in was to engage employees through an internal surface, but relied on an external strategy to quickly earn the attention and support of department leaders, who could help us solve our cold-start challenge by encouraging employees to participate.</li>
+            <li>Our next planned step was to collaborate with various product and cross-functional teams to create a roadmap for both development and go-to-market.</li>
+        </ul>
+    </div> 
 
     <!-- <div class="detail">
         <h3>Outcomes & Next Steps</h3>
