--- a/portfolio/profile-mgmt.html
+++ b/portfolio/profile-mgmt.html
@@ -63,7 +63,7 @@
                 <img class="lightbox-image" src="../assets/images/profiles-us.png" width="100%" height="100%"/>
             </figure>
             <figure>
-                <figcaption>Company Profile on glassdoor.co.il &#40;Israel&#41;</figcaption>
+                <figcaption>Company Profile on glassdoor.co.in &#40;India&#41;</figcaption>
                 <img class="lightbox-image" src="../assets/images/profiles-row.png" width="100%" height="100%" />
             </figure>
             <figure>
