--- a/portfolio/profile-mgmt.html
+++ b/portfolio/profile-mgmt.html
@@ -74,7 +74,7 @@
     </div>
 
     <div class="detail">
-        <h3>Managing International Profiles</h3>
+        <h3>Setting Up & Managing International Profiles</h3>
         <p>Employers first needed to be able to set the regions and languages for which they wanted to display custom content. Users could add any regional profile for free, which allowed them to customize a limited set of content for that top level domain. Users could also group top level domains in order to customize content for a broader region &#40;e.g. group Mexico & Spain to customize Spanish-langugage content&#41;.</p>
         <div class="img-group">
             <img class="lightbox-image" src="../assets/images/profiles-manage-selector.png" width="48%" height="48%" />
@@ -83,15 +83,48 @@
     </div>
 
     <div class="detail">
-            <h3>Managing Profile Content</h3>
-            <p>Employers were then able to manage their branded content at the field level. They could set global company details which would display across all domains unless customized. Tooltips, tags, and enabled/disabled states across the UX helped users understand the level of customization they were managing.g</p>
-            <div class="img-group">
-                <img class="lightbox-image" src="../assets/images/profiles-content-global.png" width="30%" height="30%" />
-                <img class="lightbox-image" src="../assets/images/profiles-content-default.png" width="30%" height="30%" />
-                <img class="lightbox-image" src="../assets/images/profiles-content-canada.png" width="30%" height="30%" />
-            </div>
+        <h3>Navigating Between Profiles</h3>
+        <p>Navigating to the correct profile to customize was very important within employers' workflow. We iterated through various information architecture &#40;IA&#41; models to organize regional and language groups and to indicate which content users would be able to customize, including free & paid &#40;noted as "Enhanced Profile"&#41; fields.</p>
+        <div class="img-group">
+            <figure>
+                <figcaption>The simplest use case, where employers did not customize any content by region or language.</figcaption>
+                <img class="lightbox-image" src="../assets/images/profiles-switcher-free.png" width="100%" height="100%"/>
+            </figure>
+            <figure>
+                <figcaption>A more common use case, where employers had a mix of free and enhanced profiles and groupings.</figcaption>
+                <img class="lightbox-image" src="../assets/images/profiles-switcher-paid.png" width="100%" height="100%" />
+            </figure>
+            <figure>
+                <figcaption>The most complex use case, where employers also managed Indeed branded content.</figcaption>
+                <img class="lightbox-image" src="../assets/images/profiles-switcher-in.png" width="100%" height="100%" />
+            </figure>
+        </div>
+        <div class="img-group">
+            <figure>
+                <figcaption>Subnavigaion for managing global default content.</figcaption>
+                <img class="lightbox-image" src="../assets/images/profiles-subnav-default.png" width="100%" height="100%"/>
+            </figure>
+            <figure>
+                <figcaption>Subnavigation for customizing free profile content.</figcaption>
+                <img class="lightbox-image" src="../assets/images/profiles-subnav-free.png" width="100%" height="100%" />
+            </figure>
+            <figure>
+                <figcaption>Subnavigation for customizing enhanced profile content.</figcaption>
+                <img class="lightbox-image" src="../assets/images/profiles-subnav-paid.png" width="100%" height="100%" />
+            </figure>
         </div>
     </div>
+
+    <div class="detail">
+        <h3>Managing Profile Content</h3>
+        <p>Employers were then able to manage their branded content at the field level. They could set global company details which would display across all domains unless customized. Tooltips, tags, and enabled/disabled states across the UX helped users understand the level of customization they were managing.</p>
+        <div class="img-group">
+            <img class="lightbox-image" src="../assets/images/profiles-content-global.png" width="30%" height="30%" />
+            <img class="lightbox-image" src="../assets/images/profiles-content-default.png" width="30%" height="30%" />
+            <img class="lightbox-image" src="../assets/images/profiles-content-canada.png" width="30%" height="30%" />
+        </div>
+    </div>
+    <!-- </div> -->
 
     <!-- <div class="impact">
         <h3>So what?</h3>
