--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -56,6 +56,7 @@
         <h2>B2B International Profiles</h2>
         <div class="tags">
             <p class="tag">B2B / B2B2C</p>
+            <p class="tag">Product Enhancements</p>
             <p class="tag">Solution Ideation & Iteration</p>
         </div>
         <p>As a solo individual contributor, I managed the user experience for Glassdoor&apos;s primary B2B Product, Employer Center. Working closely with three product teams, I delivered critical platform updates in order to retain customers and provide them with best-in-class tools to manage their Employer Brands.</p>
