main nav and cleanup

--- a/index.html
+++ b/index.html
@@ -11,28 +11,26 @@
       </head>
 <body>
 
-    <!-- <div id="header-placeholder"></div> -->
     <header>
         <h1>Tami Evnin</h1>
-        <!-- <div class="hamburger-menu" onclick="toggleMenu()">
-            &#9776;
-        </div> -->
+
+
+        <nav>
+            <!-- <a href="#">Home</a> -->
+            <a href="portfolio/index.html">Portfolio</a>
+        </nav>
     </header>
 
-    <!-- <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="portfolio/index.html">Portfolio</a></li>
-        </ul>
-    </nav> -->
+ 
 
     <h2>Accomplished product design leader with expertise in driving product innovation and design strategy in B2B, Recruiting Tech, and Fintech.</h2>
-    
+
+    <p>I'm currently exploring opportunities for consulting and freelance projects. If you're interested in collaborating, please reach out on <a href="https://www.linkedin.com/in/tamiiiiiiiiiiii/">LinkedIn.</a></p>
+
+    <div class="divider"></div>
     <p>My journey has seen me at the helm of discovery research and new product concept ideation in both nascent B2B and consumer products. Notably, I've left my mark at esteemed organizations such as Glassdoor & Nasdaq. I have collaborated with cross-functional teams, including Product Management, Engineering, Market Insights, and Business Operations to develop, refine, and present compelling product strategies and roadmaps to executive leadership.</p>
 
     <p>My commitment to product and design excellence runs deep. I've championed user-centered methods, ensuring product roadmaps reflect the most pressing user problems and market opportunities. My influence has also extended to the establishment and management of Design Systems, enabling consistency and efficiency in design craft and product development process.</p>
-
-    <p>Currently, I'm recharging my creative energies and savoring life beyond work. While I soak in this much-needed break, I'm also exploring opportunities for consulting and freelance projects. If you're interested in collaborating, please reach out on <a href="https://www.linkedin.com/in/tamiiiiiiiiiiii/">LinkedIn.</a></p>
 
     <script src="script.js"></script>
     
