--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,18 +14,12 @@
   <!-- Your content goes here -->
 
     <header>
-        <h1>Tami Evnin - Portfolio</h1>
-        <!-- <div class="hamburger-menu" onclick="toggleMenu()">
-            &#9776;
-        </div> -->
+        <h1>Tami Evnin</h1>
+        <nav>
+            <a href="../index.html">Home</a>
+            <!-- <a href="portfolio/index.html">Portfolio</a> -->
+        </nav>
     </header>
-
-    <!-- <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="#">Portfolio</a></li>
-        </ul>
-    </nav> -->
 
   
     <div class="project">
