--- a/portfolio/profile-mgmt.html
+++ b/portfolio/profile-mgmt.html
@@ -16,19 +16,10 @@
 
     <header>
         <h1>Tami Evnin</h1>
-        <a href="index.html">Back to portfolio</a>
-        <!-- <div class="hamburger-menu" onclick="toggleMenu()">
-            &#9776;
-        </div> -->
+        <nav>
+            <a href="index.html">Back to portfolio</a>
+        </nav>
     </header>
-
-    <!-- <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="#">Portfolio</a></li>
-        </ul>
-    </nav> -->
-
   
     <div class="intro">
         <h2>B2B - Managing International Profiles</h2>
