--- a/portfolio/zero-to-one.html
+++ b/portfolio/zero-to-one.html
@@ -16,19 +16,10 @@
 
     <header>
         <h1>Tami Evnin</h1>
-        <a href="index.html">Back to portfolio</a>
-        <!-- <div class="hamburger-menu" onclick="toggleMenu()">
-            &#9776;
-        </div> -->
+        <nav>
+            <a href="index.html">Back to portfolio</a>
+        </nav>
     </header>
-
-    <!-- <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="#">Portfolio</a></li>
-        </ul>
-    </nav> -->
-
   
     <div class="intro">
         <h2>New Product Discovery & Strategy</h2>
@@ -103,8 +94,7 @@
 
         <p>In addition to B2B concepts, I designed proof of concept prototoypes to test with potential B2C users. Below is one such prototype we used in concept testing. You can also watch a video walkthrough of the prototype <a href="https://drive.google.com/file/d/14ga9fcmIJ0DoKj-0IIXfttrtnLOIWO3T/view?usp=sharing" target="_blank">here</a>.</p>
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="450" height="700" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FtyVPMxY0QW6pyZCRohXBKj%2FPhase-2-Employee-Research%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D21-1046%26viewport%3D540%252C458%252C0.04%26t%3DWiMnTdZdtmWzwr5c-1%26scaling%3Dscale-down%26starting-point-node-id%3D21%253A1046%26mode%3Ddesign" allowfullscreen></iframe>
-    </div>
-    <div class="impact">
+
         <h3>So what?</h3>
         <ul>
             <li>By the end of the concept phase, we saw very strong traction of our product concept with Employee users. The value proposition of creating a safe space to engage openly and transparently with your team resonated strongly.</li>
@@ -112,12 +102,7 @@
             <li>After considering several approaches, we believed our way-in was to engage employees through an internal surface, but relied on an external strategy to quickly earn the attention and support of department leaders, who could help us solve our cold-start challenge by encouraging employees to participate.</li>
             <li>Our next planned step was to collaborate with various product and cross-functional teams to create a roadmap for both development and go-to-market.</li>
         </ul>
-    </div> 
-
-    <!-- <div class="detail">
-        <h3>Outcomes & Next Steps</h3>
-        <p></p>
-    </div> -->
+    </div>
 
     <script src="../script.js"></script>
 </body>
