--- a/portfolio/design-system.html
+++ b/portfolio/design-system.html
@@ -15,19 +15,10 @@
 
     <header>
         <h1>Tami Evnin</h1>
-        <a href="index.html">Back to portfolio</a>
-        <!-- <div class="hamburger-menu" onclick="toggleMenu()">
-            &#9776;
-        </div> -->
+        <nav>
+            <a href="index.html">Back to portfolio</a>
+        </nav>
     </header>
-
-    <!-- <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="#">Portfolio</a></li>
-        </ul>
-    </nav> -->
-
   
     <div class="intro">
         <h2>Design System Leadership</h2>
