--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 
     <header>
         <h1>Tami Evnin</h1>
-
-
         <nav>
             <!-- <a href="#">Home</a> -->
             <a href="portfolio/index.html">Portfolio</a>
@@ -25,7 +23,7 @@
 
     <h2>Accomplished product design leader with expertise in driving product innovation and design strategy in B2B, Recruiting Tech, and Fintech.</h2>
 
-    <p>I'm currently exploring opportunities for consulting and freelance projects. If you're interested in collaborating, please reach out on <a href="https://www.linkedin.com/in/tamiiiiiiiiiiii/">LinkedIn.</a></p>
+    <p>I'm currently exploring opportunities for consulting and freelance projects. If you're interested in collaborating, please reach out on <a href="https://www.linkedin.com/in/tamiiiiiiiiiiii/">LinkedIn</a>.</p>
 
     <div class="divider"></div>
     <p>My journey has seen me at the helm of discovery research and new product concept ideation in both nascent B2B and consumer products. Notably, I've left my mark at esteemed organizations such as Glassdoor & Nasdaq. I have collaborated with cross-functional teams, including Product Management, Engineering, Market Insights, and Business Operations to develop, refine, and present compelling product strategies and roadmaps to executive leadership.</p>
